# gpu-util-interference

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gpu_util_bench_lib/: CMakeLists.txt  cuda_helper.cuh  kernels.cu  kernels.cuh
inter_sm/l2_cache/: README.md  l2_cache.cu  run_l2_experiment.sh
inter_sm/memory_bandwidth/: README.md  mem_bw.cu  run_membw_experiment.sh
inter_sm/thread_block_scheduler/: README.md  run_tb_experiment.sh  tb_scheduler.cu
intra_sm/ipc/: README.md  ipc.cu  run_ipc_experiment.sh
intra_sm/l1_cache/: README.md  l1_cache.cu  run_l1_experiment.sh
intra_sm/pipelines/: README.md  pipelines.cu  run_pipeline_experiment.sh
mm_pytorch/: CMakeLists.txt  README.md  python_interface.cu  run_mm_pytorch_interf.py
pitfalls/pitfall_achieved_occupancy/: README.md  achieved_occupancy.cu  run_mps_experiment.sh  run_stream_experiment.sh
pitfalls/pitfall_comp_mem/: README.md  comp_mem_ipc.cu  run_ipc_experiment.sh
pitfalls/pitfall_nvidia_smi/: README.md  nvml_util.cu  run_util_experiment.sh
